--- a/css/style.css
+++ b/css/style.css
@@ -371,37 +371,69 @@ a {
   list-style: none;
 }
 
+@media (min-width: 992px) {
+  .header-list__item a {
+    position: relative;
+  }
+  .header-list__item a:before {
+    content: '';
+    bottom: 0;
+    left: 0;
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    background-color: #fff;
+    -webkit-transition: 0.2s;
+    transition: 0.2s;
+    -webkit-transform: scaleX(0);
+            transform: scaleX(0);
+  }
+  .header-list__item a:hover:before {
+    -webkit-transform: scaleX(1);
+            transform: scaleX(1);
+  }
+}
+
 .header {
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(0, 0, 0, 0.7);
+  padding: 15px 0;
+  margin-top: 20px;
+  z-index: 2;
 }
 
 .header-wrap {
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
 }
 
 .header-logo {
+  position: absolute;
+  top: auto;
+  left: 0;
   width: 80px;
   height: 80px;
+  border: 1px solid rgba(0, 0, 0, 0.7);
   border-radius: 80px;
-  background-color: #fff;
+  background-color: white;
 }
 
 .header-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  text-transform: uppercase;
 }
 
 .header-list__item {
-  margin-right: 15px;
+  margin-right: 30px;
 }
 
 .header-list__item:last-child {
@@ -410,5 +442,18 @@ a {
 
 .header-list__item a {
   color: #fff;
+  padding-bottom: 7px;
+}
+
+.header-burger {
+  display: none;
+}
+
+.hero {
+  margin-top: -70px;
+  height: 100vh;
+  background-image: url(../img/hero/1.jpg);
+  background-position: center center;
+  background-size: cover;
 }
 /*# sourceMappingURL=style.css.map */
