--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -20,3 +20,26 @@ a
   padding: 0
   margin: 0
   list-style: none
+
+// HOVER ЭФФЕКТЫ 
+@media (min-width: 992px)
+  // HOVER эффекты блока HEADER 
+  .header
+    &-list 
+      &__item
+        a 
+          position: relative 
+          &:before 
+            content: ''
+            bottom: 0
+            left: 0
+            position: absolute
+            width: 100%
+            height: 1px
+            background-color: #fff
+            transition: 0.2s
+            transform: scaleX(0)
+          &:hover
+            &:before 
+              transform: scaleX(1)
+
