--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -1,19 +1,31 @@
 .header 
-  background-color: rgba(0,0,0, 0.8)
+  background-color: rgba(0,0,0, 0.7)
+  padding: 15px 0
+  margin-top: 20px
+  z-index: 2
   &-wrap 
+    position: relative
     display: flex
-    justify-content: space-between 
+    justify-content: flex-end
     align-items: center
   &-logo 
+    position: absolute
+    top: auto
+    left: 0
     width: 80px
     height: 80px
+    border: 1px solid rgba(0,0,0, 0.7)
     border-radius: 80px
-    background-color: #fff
+    background-color: white
   &-list 
     display: flex
+    text-transform: uppercase
     &__item
-      margin-right: 15px 
+      margin-right: 30px 
       &:last-child
         margin-right: 0
       a 
         color: #fff
+        padding-bottom: 7px
+  &-burger 
+    display: none
