--- a/css/style.css
+++ b/css/style.css
@@ -395,10 +395,19 @@ a {
 }
 
 .header {
-  background-color: rgba(0, 0, 0, 0.7);
+  position: relative;
   padding: 15px 0;
   margin-top: 20px;
-  z-index: 2;
+}
+
+.header:before {
+  content: '';
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.5);
+  top: 0;
+  left: 0;
+  height: 46px;
+  width: 100%;
 }
 
 .header-wrap {
@@ -451,9 +460,5 @@ a {
 
 .hero {
   margin-top: -70px;
-  height: 100vh;
-  background-image: url(../img/hero/1.jpg);
-  background-position: center center;
-  background-size: cover;
 }
 /*# sourceMappingURL=style.css.map */
