--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -1,8 +1,15 @@
 .header 
-  background-color: rgba(0,0,0, 0.7)
+  position: relative
   padding: 15px 0
   margin-top: 20px
-  z-index: 2
+  &:before 
+    content: ''
+    position: absolute
+    background-color: rgba(0,0,0, 0.5)
+    top: 0
+    left: 0
+    height: 46px
+    width: 100%
   &-wrap 
     position: relative
     display: flex
