--- a/sass/blocks/_hero.sass
+++ b/sass/blocks/_hero.sass
@@ -1,6 +1,6 @@
 .hero 
   margin-top: -70px
-  height: 100vh
-  background-image: url(../img/hero/1.jpg)
-  background-position: center center
-  background-size: cover
+  // height: 100vh
+  // background-image: url(../img/hero/1.jpg)
+  // background-position: center center
+  // background-size: cover
