--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -13,13 +13,23 @@ a
   cursor: pointer
 
 .container 
-  max-width: 1300px
+  max-width: 1170px
   margin: auto
 
 .list 
   padding: 0
   margin: 0
   list-style: none
+
+.section 
+  padding: 55px 0
+
+.title 
+  font-size: 46px
+  line-height: 40px
+  letter-spacing: 1.8px
+  text-transform: uppercase
+  text-align: center
 
 // HOVER ЭФФЕКТЫ 
 @media (min-width: 992px)
