--- a/sass/style.sass
+++ b/sass/style.sass
@@ -4,5 +4,7 @@
 
 // Импорт стилей шапки сайта
 @import 'blocks/header'
-// Импорт стилей шапки сайта
+// Импорт стилей главного слайдера hero 
 @import 'blocks/hero'
+// Импорт стилей блока с преимуществами
+@import 'blocks/edge'
