--- a/css/style.css
+++ b/css/style.css
@@ -361,7 +361,7 @@ a {
 }
 
 .container {
-  max-width: 1300px;
+  max-width: 1170px;
   margin: auto;
 }
 
@@ -369,6 +369,18 @@ a {
   padding: 0;
   margin: 0;
   list-style: none;
+}
+
+.section {
+  padding: 55px 0;
+}
+
+.title {
+  font-size: 46px;
+  line-height: 40px;
+  letter-spacing: 1.8px;
+  text-transform: uppercase;
+  text-align: center;
 }
 
 @media (min-width: 992px) {
@@ -565,7 +577,49 @@ a {
 
 .hero {
   margin-top: -70px;
+  min-height: 700px;
   height: 100vh;
+  overflow: hidden;
   z-index: -1;
+}
+
+.edge__title {
+  margin-bottom: 100px;
+}
+
+.edge-cards {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.edge-card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  width: 48%;
+}
+
+.edge-card__image {
+  margin-top: 20px;
+  margin-right: 20px;
+  width: 15%;
+}
+
+.edge-card__title {
+  text-transform: uppercase;
+  font-style: 24px;
+}
+
+.edge-card__text {
+  line-height: 1.55;
 }
 /*# sourceMappingURL=style.css.map */
