--- a/sass/blocks/_hero.sass
+++ b/sass/blocks/_hero.sass
@@ -1,6 +1,8 @@
 .hero 
   margin-top: -70px
+  min-height: 700px
   height: 100vh
+  overflow: hidden
   z-index: -1
   // background-image: url(../img/hero/1.jpg)
   // background-position: center center
