Блок с этапами работы

--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -2,7 +2,7 @@
   box-sizing: border-box
   
 body 
-  font-family: 'Proxima Nova Light', sans-serif
+  font-family: 'Proxima Nova Regular', sans-serif
 
 img
   max-width: 100%
@@ -22,7 +22,7 @@ a
   list-style: none
 
 .section 
-  padding: 55px 0
+  padding-top: 55px
 
 .title 
   font-size: 46px
