--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -6,7 +6,7 @@
   &:before 
     content: ''
     position: absolute
-    background-color: rgba(0,0,0, 0.5)
+    background-color: $dark-color
     top: 0
     left: 0
     height: 46px
@@ -22,9 +22,9 @@
     left: 0
     width: 80px
     height: 80px
-    border: 1px solid rgba(0,0,0, 0.7)
+    border: 1px solid $dark-color
     border-radius: 80px
-    background-color: white
+    background-color: $light-color
   &-list 
     display: flex
     text-transform: uppercase
