--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,6 +1,8 @@
 @import 'normalize'
 @import 'interface'
 @import 'slick'
+@import 'fonts'
+@import 'colors'
 
 // Импорт стилей шапки сайта
 @import 'blocks/header'
@@ -8,3 +10,5 @@
 @import 'blocks/hero'
 // Импорт стилей блока с преимуществами
 @import 'blocks/edge'
+// Импорт стилей блока с этапами работы
+@import 'blocks/steps'
