--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -347,7 +348,7 @@ template {
 }
 
 body {
-  font-family: 'Proxima Nova Light', sans-serif;
+  font-family: 'Proxima Nova Regular', sans-serif;
 }
 
 img {
@@ -372,7 +373,7 @@ a {
 }
 
 .section {
-  padding: 55px 0;
+  padding-top: 55px;
 }
 
 .title {
@@ -510,6 +511,46 @@ a {
   display: none;
 }
 
+@font-face {
+  font-family: 'Proxima Nova Light';
+  src: url("../fonts/ProximaNova/ProximaNova-Light.eot");
+  src: url("../fonts/ProximaNova/ProximaNova-Light.eot?#iefix") format("embedded-opentype"), url("../fonts/ProximaNova/ProximaNova-Light.woff") format("woff"), url("../fonts/ProximaNova/ProximaNova-Light.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Proxima Nova Thin';
+  src: url("../fonts/ProximaNova/ProximaNovaT-Thin.eot");
+  src: url("../fonts/ProximaNova/ProximaNovaT-Thin.eot?#iefix") format("embedded-opentype"), url("../fonts/ProximaNova/ProximaNovaT-Thin.woff") format("woff"), url("../fonts/ProximaNova/ProximaNovaT-Thin.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Proxima Nova Regular';
+  src: url("../fonts/ProximaNova/ProximaNova-Regular.eot");
+  src: url("../fonts/ProximaNova/ProximaNova-Regular.eot.eot?#iefix") format("embedded-opentype"), url("../fonts/ProximaNova/ProximaNova-Regular.woff") format("woff"), url("../fonts/ProximaNova/ProximaNova-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Proxima Nova Bold';
+  src: url("../fonts/ProximaNova/ProximaNova-Bold.eot");
+  src: url("../fonts/ProximaNova/ProximaNova-Bold.eot?#iefix") format("embedded-opentype"), url("../fonts/ProximaNova/ProximaNova-Bold.woff") format("woff"), url("../fonts/ProximaNova/ProximaNova-Bold.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Bebas Neue Regular';
+  src: url("../fonts/BebasNeue/BebasNeueRegular.eot");
+  src: url("../fonts/BebasNeue/BebasNeueRegular.eot?#iefix") format("embedded-opentype"), url("../fonts/BebasNeue/BebasNeueRegular.woff") format("woff"), url("../fonts/BebasNeue/BebasNeueRegular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
 .header {
   position: relative;
   padding: 15px 0;
@@ -546,9 +587,9 @@ a {
   left: 0;
   width: 80px;
   height: 80px;
-  border: 1px solid rgba(0, 0, 0, 0.7);
+  border: 1px solid rgba(0, 0, 0, 0.5);
   border-radius: 80px;
-  background-color: white;
+  background-color: #ffffff;
 }
 
 .header-list {
@@ -584,7 +625,7 @@ a {
 }
 
 .edge__title {
-  margin-bottom: 100px;
+  margin-bottom: 85px;
 }
 
 .edge-cards {
@@ -616,10 +657,200 @@ a {
 
 .edge-card__title {
   text-transform: uppercase;
-  font-style: 24px;
 }
 
 .edge-card__text {
   line-height: 1.55;
+}
+
+.edge-main {
+  margin-top: 50px;
+  padding: 15px;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.75);
+  color: #ffffff;
+}
+
+.edge-main__text {
+  font-size: 24px;
+  width: 50%;
+  margin: auto;
+  text-align: center;
+  line-height: 1.55;
+}
+
+.transition, .steps__text, .steps-list__item i:before, .steps-list__item i:after {
+  -webkit-transition: all 0.25s ease-in-out;
+  transition: all 0.25s ease-in-out;
+}
+
+.flipIn, .steps-list__item {
+  -webkit-animation: flipdown 0.5s ease both;
+          animation: flipdown 0.5s ease both;
+}
+
+.no-select {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.steps {
+  text-align: left;
+  background: url("../img/hero/1.jpg"), rgba(255, 255, 255, 0.7);
+  background-blend-mode: color;
+  background-position: center center;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+.steps__title {
+  margin-bottom: 85px;
+}
+
+.steps__subtitle {
+  font-weight: bold;
+  font-size: 24px;
+  text-transform: uppercase;
+}
+
+.steps-content {
+  margin: auto;
+  text-align: justify;
+}
+
+.steps__text {
+  position: relative;
+  overflow: hidden;
+  opacity: 1;
+  -webkit-transform: translate(0, 0);
+          transform: translate(0, 0);
+  margin-top: 14px;
+  z-index: 2;
+  list-style: none;
+}
+
+.steps__text__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 8px 0;
+}
+
+.steps__text__item:before {
+  content: "•";
+  font-size: 30px;
+  color: #000000;
+  padding-right: 10px;
+}
+
+.steps-list {
+  list-style: none;
+  -webkit-perspective: 900;
+          perspective: 900;
+  padding: 0;
+  margin: 0;
+}
+
+.steps-list__item {
+  position: relative;
+  padding: 0;
+  margin: 0;
+}
+
+.steps-list__item:not(:first-child) {
+  border-top: 1px solid rgba(0, 0, 0, 0.5);
+}
+
+.steps-list__item:first-child {
+  padding-top: 19.9px;
+}
+
+.steps-list__item:nth-of-type(1) {
+  -webkit-animation-delay: 0.5s;
+          animation-delay: 0.5s;
+}
+
+.steps-list__item:nth-of-type(2) {
+  -webkit-animation-delay: 0.75s;
+          animation-delay: 0.75s;
+}
+
+.steps-list__item:nth-of-type(3) {
+  -webkit-animation-delay: 1.0s;
+          animation-delay: 1.0s;
+}
+
+.steps-list__item:nth-of-type(4) {
+  -webkit-animation-delay: 1.25s;
+          animation-delay: 1.25s;
+}
+
+.steps-list__item:last-of-type {
+  padding-bottom: 0;
+}
+
+.steps-list__item i {
+  position: absolute;
+  -webkit-transform: translate(-6px, 0);
+          transform: translate(-6px, 0);
+  margin-top: 16px;
+  right: 0;
+}
+
+.steps-list__item i:before, .steps-list__item i:after {
+  content: "";
+  position: absolute;
+  background-color: #000000;
+  width: 6px;
+  height: 18px;
+}
+
+.steps-list__item i:before {
+  -webkit-transform: translate(-5px, 0) rotate(45deg);
+          transform: translate(-5px, 0) rotate(45deg);
+}
+
+.steps-list__item i:after {
+  -webkit-transform: translate(5px, 0) rotate(-45deg);
+          transform: translate(5px, 0) rotate(-45deg);
+}
+
+.steps-list__item input[type=checkbox] {
+  position: absolute;
+  cursor: pointer;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  opacity: 0;
+}
+
+.steps-list__item input[type=checkbox]:checked ~ h2 {
+  color: #000000;
+  font-weight: normal;
+}
+
+.steps-list__item input[type=checkbox]:checked ~ ul {
+  margin-top: 0;
+  max-height: 0;
+  opacity: 0;
+  -webkit-transform: translate(0, 50%);
+          transform: translate(0, 50%);
+}
+
+.steps-list__item input[type=checkbox]:checked ~ i:before {
+  -webkit-transform: translate(5px, 0) rotate(45deg);
+          transform: translate(5px, 0) rotate(45deg);
+}
+
+.steps-list__item input[type=checkbox]:checked ~ i:after {
+  -webkit-transform: translate(-5px, 0) rotate(-45deg);
+          transform: translate(-5px, 0) rotate(-45deg);
 }
 /*# sourceMappingURL=style.css.map */
