--- a/sass/blocks/_edge.sass
+++ b/sass/blocks/_edge.sass
@@ -1,6 +1,6 @@
 .edge
   &__title 
-    margin-bottom: 100px
+    margin-bottom: 85px
   &-cards
     display: flex
     justify-content: space-between
@@ -15,8 +15,19 @@
       width: 15%
     &__title 
       text-transform: uppercase
-      font-style: 24px
     &__text  
+      line-height: 1.55
+  &-main
+    margin-top: 50px
+    padding: 15px
+    width: 100%
+    background-color: rgba(0,0,0, 0.75)
+    color: $light-color
+    &__text 
+      font-size: 24px
+      width: 50%
+      margin: auto
+      text-align: center
       line-height: 1.55
     
 
