--- a/sass/blocks/_steps.sass
+++ b/sass/blocks/_steps.sass
@@ -15,9 +15,9 @@
 
 .steps 
   text-align: left
-  // background-image: url("../img/hero/1.jpg")
-  background: url('../img/hero/1.jpg'), rgba(255,255,255,0.7)
-  background-blend-mode: color
+  background-image: url("../img/steps/2.png")
+  // background: url('../img/hero/1.png'), rgba(255,255,255,0.7)
+  // background-blend-mode: color
   background-position: center center
   background-size: cover
   background-attachment: fixed
