Блок с портфолио на flex

--- a/sass/blocks/_steps.sass
+++ b/sass/blocks/_steps.sass
@@ -21,6 +21,8 @@
   background-position: center center
   background-size: cover
   background-attachment: fixed
+  padding-bottom: 55px
+  border-bottom: 1px solid $dark-color
   &__title 
     margin-bottom: 85px
   &__subtitle
