--- a/sass/style.sass
+++ b/sass/style.sass
@@ -12,3 +12,5 @@
 @import 'blocks/edge'
 // Импорт стилей блока с этапами работы
 @import 'blocks/steps'
+// Импорт стилей блока с портфолио
+@import 'blocks/_portfolio.sass'
