--- a/css/style.css
+++ b/css/style.css
@@ -405,6 +405,9 @@ a {
     -webkit-transform: scaleX(1);
             transform: scaleX(1);
   }
+  .hero-arrow:hover a {
+    cursor: pointer;
+  }
 }
 
 /* Slider */
@@ -622,9 +625,25 @@ a {
   height: 100vh;
   overflow: hidden;
   z-index: -1;
+  position: relative;
 }
 
 .hero-arrow {
+  position: absolute;
+  z-index: 999;
+  bottom: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+}
+
+.hero-arrow a {
+  display: block;
+  width: 50px;
   z-index: 999;
 }
 
@@ -708,6 +727,8 @@ a {
   background-position: center center;
   background-size: cover;
   background-attachment: fixed;
+  padding-bottom: 55px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.75);
 }
 
 .steps__title {
@@ -768,7 +789,7 @@ a {
 }
 
 .steps-list__item:not(:first-child) {
-  border-top: 1px solid rgba(0, 0, 0, 0.5);
+  border-top: 1px solid rgba(0, 0, 0, 0.75);
 }
 
 .steps-list__item:first-child {
@@ -855,5 +876,30 @@ a {
 .steps-list__item input[type=checkbox]:checked ~ i:after {
   -webkit-transform: translate(-5px, 0) rotate(-45deg);
           transform: translate(-5px, 0) rotate(-45deg);
+}
+
+.portfolio {
+  padding-top: 85px;
+}
+
+.portfolio-cards {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  height: 2800px;
+}
+
+.portfolio-card {
+  width: 550px;
+  margin: 15px;
 }
 /*# sourceMappingURL=style.css.map */
