--- a/sass/_colors.sass
+++ b/sass/_colors.sass
@@ -1,4 +1,5 @@
-$dark-color: rgba(0,0,0, 0.5)
+$medium-color: rgba(0,0,0, 0.5)
+$dark-color: rgba(0,0,0, 0.75)
 $black: #000000
 $light-color: #ffffff
 $error-color: #e51c1c 
