--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -53,3 +53,9 @@ a
             &:before 
               transform: scaleX(1)
 
+  .hero
+    &-arrow 
+      &:hover 
+        a
+          cursor: pointer
+
