--- a/sass/blocks/_edge.sass
+++ b/sass/blocks/_edge.sass
@@ -21,7 +21,7 @@
     margin-top: 50px
     padding: 15px
     width: 100%
-    background-color: rgba(0,0,0, 0.75)
+    background-color: $dark-color
     color: $light-color
     &__text 
       font-size: 24px
