--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -6,7 +6,7 @@
   &:before 
     content: ''
     position: absolute
-    background-color: $dark-color
+    background-color: $medium-color
     top: 0
     left: 0
     height: 46px
@@ -22,7 +22,7 @@
     left: 0
     width: 80px
     height: 80px
-    border: 1px solid $dark-color
+    border: 1px solid $medium-color
     border-radius: 80px
     background-color: $light-color
   &-list 
