--- a/sass/blocks/_hero.sass
+++ b/sass/blocks/_hero.sass
@@ -4,5 +4,15 @@
   height: 100vh
   overflow: hidden
   z-index: -1
+  position: relative
   &-arrow 
+    position: absolute
     z-index: 999
+    bottom: 20px
+    display: flex
+    justify-content: center
+    width: 100%
+    a
+      display: block
+      width: 50px
+      z-index: 999
