--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -53,9 +53,11 @@ a
             &:before 
               transform: scaleX(1)
 
-  .hero
-    &-arrow 
+  .portfolio
+    &-card 
       &:hover 
-        a
-          cursor: pointer
+        &:before
+          opacity: 1
+
+    
 
