--- a/sass/blocks/_steps.sass
+++ b/sass/blocks/_steps.sass
@@ -16,15 +16,14 @@
 .steps 
   text-align: left
   background-image: url("../img/steps/2.png")
-  // background: url('../img/hero/1.png'), rgba(255,255,255,0.7)
-  // background-blend-mode: color
   background-position: center center
   background-size: cover
   background-attachment: fixed
   padding-bottom: 55px
   border-bottom: 1px solid $dark-color
+  position: relative
   &__title 
-    margin-bottom: 85px
+    margin-bottom: 65px
   &__subtitle
     font-weight: bold
     font-size: 24px
