--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,8 +1,9 @@
 @import 'normalize'
+@import 'colors'
 @import 'interface'
 @import 'slick'
 @import 'fonts'
-@import 'colors'
+
 
 // Импорт стилей шапки сайта
 @import 'blocks/header'
@@ -14,3 +15,5 @@
 @import 'blocks/steps'
 // Импорт стилей блока с портфолио
 @import 'blocks/_portfolio.sass'
+// Импорт стилей блока с инстаграмом
+@import 'blocks/follow'
