--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -27,9 +27,11 @@ a
 .title 
   font-size: 46px
   line-height: 40px
-  letter-spacing: 1.8px
+  // letter-spacing: 1.8px
   text-transform: uppercase
   text-align: center
+  font-family: 'SONGER Grotesque Bold'
+  letter-spacing: 4px
 
 // HOVER ЭФФЕКТЫ 
 @media (min-width: 992px)
@@ -56,6 +58,7 @@ a
   .portfolio
     &-card 
       &:hover 
+        cursor: pointer
         &:before
           opacity: 1
 
