--- a/sass/blocks/_edge.sass
+++ b/sass/blocks/_edge.sass
@@ -22,10 +22,12 @@
     padding: 15px
     width: 100%
     background-color: $dark-color
+    font-family: 'SONGER Grotesque'
+    letter-spacing: 4.5px
     color: $light-color
     &__text 
       font-size: 24px
-      width: 50%
+      width: 80%
       margin: auto
       text-align: center
       line-height: 1.55
