--- a/sass/blocks/_steps.sass
+++ b/sass/blocks/_steps.sass
@@ -28,6 +28,7 @@
     font-weight: bold
     font-size: 24px
     text-transform: uppercase
+    @extend .no-select
   &-content 
     margin: auto
     text-align: justify
