--- a/sass/style.sass
+++ b/sass/style.sass
@@ -18,3 +18,5 @@
 @import 'blocks/_portfolio.sass'
 // Импорт стилей блока с инстаграмом
 @import 'blocks/follow'
+// Импорт стилей блока с конатктами
+@import 'blocks/contacts'
