--- a/css/style.css
+++ b/css/style.css
@@ -1019,11 +1019,22 @@ a {
   text-align: center;
   letter-spacing: 0.8px;
   color: rgba(0, 0, 0, 0.75);
-  margin-bottom: 55px;
+  margin-bottom: 35px;
   font-size: 20px;
 }
 
 .follow-slider__item {
-  margin: 0 15px;
+  margin: 0 10px;
+}
+
+.contacts {
+  background-color: rgba(0, 0, 0, 0.75);
+  color: #ffffff;
+}
+
+.contacts-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 /*# sourceMappingURL=style.css.map */
