--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -62,5 +62,13 @@ a
         &:before
           opacity: 1
 
+  .follow
+    &-slider 
+      &__image 
+        &:hover
+          animation: bloom ease-in-out .75s forwards
+          &:before 
+            animation: circle .75s
+
     
 
