--- a/sass/_animate.sass
+++ b/sass/_animate.sass
@@ -14,3 +14,30 @@
   100%
     transform-origin: top center
     transform: rotateX(0deg) 
+
+
+@keyframes bloom 
+  0% 
+    filter: grayscale(.8)
+ 
+  40% 
+    filter: grayscale(.5)
+ 
+  100% 
+    filter: grayscale(0)
+ 
+
+@keyframes circle 
+  0% 
+    opacity: .5
+    background: rgba(213,156,34,.2)
+ 
+  40% 
+    opacity: 1
+    // background: rgba(213,34,160,.2)
+    background: rgba($medium-color, 0.2)
+ 
+  100% 
+    width: 200%
+    height: 200%
+    opacity: 0
