--- a/sass/blocks/_follow.sass
+++ b/sass/blocks/_follow.sass
@@ -10,3 +10,23 @@
   &-slider 
     &__item
       margin: 0 10px
+    &__image
+      position: relative
+      filter: grayscale(.8)
+      overflow: hidden
+      margin: 0
+      height: 100%
+      width: 100%
+      &:before 
+        position: absolute
+        top: 50%
+        left: 50%
+        z-index: 2
+        display: block
+        content: ''
+        width: 0
+        height: 0
+        background: rgba(255,255,255,.2)
+        border-radius: 100%
+        transform: translate(-50%, -50%)
+        opacity: 0
