Ссылки на соц сети, эффект hover в файле interface

--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -70,5 +70,29 @@ a
           &:before 
             animation: circle .75s
 
+  .telegram 
+    a
+      &:hover
+        transition: 0.5s
+        color: $telegram-color
+
+  .instagram
+    a
+      &:hover
+        transition: 0.5s
+        color: $instagram-color
+
+  .whatsapp
+    a
+      &:hover
+        transition: 0.5s
+        color: $whatsapp-color
+
+  .behance
+    a
+      &:hover
+        transition: 0.5s
+        color: $behance-color
+
     
 
