--- a/sass/blocks/_portfolio.sass
+++ b/sass/blocks/_portfolio.sass
@@ -3,12 +3,13 @@
   &-cards 
     display: flex
     align-items: center
+    align-content: center
     flex-direction: column
     flex-wrap: wrap
-    height: 2650px
+    height: 3200px
   &-card 
-    width: 550px
-    margin: 15px
+    width: 650px
+    margin: 20px
     position: relative
     &:before
       content: ''
