--- a/css/style.css
+++ b/css/style.css
@@ -420,6 +420,26 @@ a {
     -webkit-animation: circle .75s;
             animation: circle .75s;
   }
+  .telegram a:hover {
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+    color: #00aced;
+  }
+  .instagram a:hover {
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+    color: #df6664;
+  }
+  .whatsapp a:hover {
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+    color: #48e965;
+  }
+  .behance a:hover {
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+    color: #0056ff;
+  }
 }
 
 /* Slider */
@@ -1047,18 +1067,20 @@ a {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  height: 2650px;
+  height: 3200px;
 }
 
 .portfolio-card {
-  width: 550px;
-  margin: 15px;
+  width: 650px;
+  margin: 20px;
   position: relative;
 }
 
@@ -1142,5 +1164,30 @@ a {
 .contacts-info {
   width: 50%;
   text-align: center;
+}
+
+.contacts-phone a, .contacts-email a {
+  color: #ffffff;
+  font-size: 24px;
+  line-height: 1.55;
+}
+
+.contacts-social__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  list-style: none;
+}
+
+.contacts-social__item {
+  font-size: 46px;
+  margin-right: 15px;
+}
+
+.contacts-social__item a {
+  color: #ffffff;
 }
 /*# sourceMappingURL=style.css.map */
