--- a/sass/blocks/_contacts.sass
+++ b/sass/blocks/_contacts.sass
@@ -9,3 +9,18 @@
   &-info 
     width: 50%
     text-align: center
+  &-phone, &-email
+    a 
+      color: $light-color
+      font-size: 24px
+      line-height: 1.55
+  &-social
+    &__list 
+      display: flex
+      justify-content: center
+      list-style: none
+    &__item 
+      font-size: 46px
+      margin-right: 15px
+      a 
+        color: $light-color
