--- a/css/style.css
+++ b/css/style.css
@@ -385,6 +385,30 @@ a {
   letter-spacing: 4px;
 }
 
+.input {
+  border: none;
+  border-bottom: 1px solid #605f5e;
+  padding: 12px;
+  outline: none;
+  background-color: transparent;
+  color: #ffffff;
+}
+
+.input:focus {
+  border-bottom: 1px solid #ffffff;
+}
+
+input.error {
+  border-bottom: 1px solid #e51c1c;
+}
+
+.button {
+  outline: none;
+  cursor: pointer;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+
 @media (min-width: 992px) {
   .header-list__item a {
     position: relative;
@@ -439,6 +463,22 @@ a {
     -webkit-transition: 0.5s;
     transition: 0.5s;
     color: #0056ff;
+  }
+  .contacts__button:hover {
+    color: rgba(0, 0, 0, 0.75);
+    background: #ffffff;
+    -webkit-transition: 0.7s;
+    transition: 0.7s;
+    -webkit-transition-delay: 0.4s;
+            transition-delay: 0.4s;
+  }
+  .contacts__button:hover:before {
+    -webkit-transform: scaleX(1);
+            transform: scaleX(1);
+  }
+  .contacts__button:hover:after {
+    -webkit-transform: scaleY(1);
+            transform: scaleY(1);
   }
 }
 
@@ -1162,8 +1202,26 @@ a {
 }
 
 .contacts-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   width: 50%;
   text-align: center;
+}
+
+.contacts__title {
+  margin-bottom: 50px;
+}
+
+.contacts-phone, .contacts-email {
+  margin-bottom: 10px;
 }
 
 .contacts-phone a, .contacts-email a {
@@ -1180,6 +1238,9 @@ a {
       -ms-flex-pack: center;
           justify-content: center;
   list-style: none;
+  margin-top: 0;
+  padding: 0;
+  margin-bottom: 50px;
 }
 
 .contacts-social__item {
@@ -1189,5 +1250,47 @@ a {
 
 .contacts-social__item a {
   color: #ffffff;
+}
+
+.contacts__input {
+  width: 40%;
+  margin-bottom: 30px;
+  margin-right: 20px;
+}
+
+.contacts__button {
+  display: block;
+  margin: auto;
+  margin-top: 30px;
+  border: none;
+  padding: 12px 30px;
+  background-color: transparent;
+  color: #ffffff;
+  position: relative;
+}
+
+.contacts__button:before, .contacts__button:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.contacts__button:before {
+  border-top: 1px solid #ffffff;
+  border-bottom: 1px solid #ffffff;
+  -webkit-transform: scaleX(0);
+          transform: scaleX(0);
+}
+
+.contacts__button:after {
+  border-left: 1px solid #ffffff;
+  border-right: 1px solid #ffffff;
+  -webkit-transform: scaleY(0);
+          transform: scaleY(0);
 }
 /*# sourceMappingURL=style.css.map */
