--- a/sass/blocks/_contacts.sass
+++ b/sass/blocks/_contacts.sass
@@ -7,9 +7,15 @@
   &__image 
     max-width: 50%
   &-info 
+    display: flex
+    flex-direction: column
+    justify-content: center
     width: 50%
     text-align: center
+  &__title 
+    margin-bottom: 50px
   &-phone, &-email
+    margin-bottom: 10px
     a 
       color: $light-color
       font-size: 24px
@@ -19,8 +25,42 @@
       display: flex
       justify-content: center
       list-style: none
+      margin-top: 0
+      padding: 0
+      margin-bottom: 50px
     &__item 
       font-size: 46px
       margin-right: 15px
       a 
         color: $light-color
+  &__input 
+    width: 40%
+    margin-bottom: 30px
+    margin-right: 20px
+  &__button 
+    display: block
+    margin: auto
+    margin-top: 30px
+    border: none
+    padding: 12px 30px
+    background-color: transparent
+    color: $light-color
+    position: relative
+    &:before, &:after
+      content: ''
+      position: absolute
+      top: 0
+      bottom: 0
+      left: 0
+      right: 0
+      transition: 0.5s
+    &:before 
+      border-top: 1px solid $light-color
+      border-bottom: 1px solid $light-color
+      transform: scaleX(0)
+    &:after
+      border-left: 1px solid $light-color
+      border-right: 1px solid $light-color
+      transform: scaleY(0)
+
+
