--- a/css/style.css
+++ b/css/style.css
@@ -1258,6 +1258,10 @@ input.error {
   margin-right: 20px;
 }
 
+.contacts__input:last-child {
+  width: 100%;
+}
+
 .contacts__button {
   display: block;
   margin: auto;
