--- a/sass/blocks/_contacts.sass
+++ b/sass/blocks/_contacts.sass
@@ -37,6 +37,8 @@
     width: 40%
     margin-bottom: 30px
     margin-right: 20px
+    &:last-child 
+      width: 100%
   &__button 
     display: block
     margin: auto
