--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -33,7 +33,7 @@
       &:last-child
         margin-right: 0
       a 
-        color: #fff
+        color: $light-color
         padding-bottom: 7px
   &-burger 
     display: none
