--- a/sass/style.sass
+++ b/sass/style.sass
@@ -20,3 +20,5 @@
 @import 'blocks/follow'
 // Импорт стилей блока с конатктами
 @import 'blocks/contacts'
+// Импорт стилей футера
+@import 'blocks/footer'
