Раздел с ползунками до после. Twentytwenty

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -4,6 +4,7 @@
 @import 'slick'
 @import 'fonts'
 @import 'animate'
+@import 'twentytwenty-no-compass'
 
 
 // Импорт стилей шапки сайта
@@ -16,6 +17,8 @@
 @import 'blocks/steps'
 // Импорт стилей блока с портфолио
 @import 'blocks/_portfolio.sass'
+// Импорт стилей блока с ползунком
+@import 'blocks/compare'
 // Импорт стилей блока с инстаграмом
 @import 'blocks/follow'
 // Импорт стилей блока с конатктами
