--- a/sass/blocks/_edge.sass
+++ b/sass/blocks/_edge.sass
@@ -12,7 +12,9 @@
     &__image 
       margin-top: 20px
       margin-right: 20px
-      width: 15%
+      width: 7%
+    &__content 
+      width: 93%
     &__title 
       text-transform: uppercase
     &__text  
