Добавление пинтерест и изменение фонового цвета

--- a/sass/_colors.sass
+++ b/sass/_colors.sass
@@ -4,9 +4,9 @@ $dark-color: rgba(0,0,0, 0.75)
 $black: #000000
 $light-color: #ffffff
 $error-color: #e51c1c 
-// $purple_neon: #bc2a8d
 $telegram-color: #00aced
-$instagram-color: #df6664
+$instagram-color: #e72379
 $whatsapp-color: #48e965
 $behance-color: #0056ff
+$pinterest-color: #e00022
 $form-color: #605f5e
