--- a/sass/blocks/_contacts.sass
+++ b/sass/blocks/_contacts.sass
@@ -1,5 +1,6 @@
 .contacts
-  background-color: #1f1b18
+  // background-color: #1f1b18
+  background-color: $dark-color
   color: $light-color
   padding-bottom: 55px
   &-wrap 
@@ -30,9 +31,11 @@
       margin-bottom: 50px
     &__item 
       font-size: 46px
-      margin-right: 15px
+      margin-right: 25px
       a 
         color: $light-color
+      &:last-child 
+        margin-right: 0
   &__input 
     width: 40%
     margin-bottom: 30px
