--- a/css/style.css
+++ b/css/style.css
@@ -452,7 +452,7 @@ input.error {
   .instagram a:hover {
     -webkit-transition: 0.5s;
     transition: 0.5s;
-    color: #df6664;
+    color: #e72379;
   }
   .whatsapp a:hover {
     -webkit-transition: 0.5s;
@@ -463,6 +463,11 @@ input.error {
     -webkit-transition: 0.5s;
     transition: 0.5s;
     color: #0056ff;
+  }
+  .pinterest a:hover {
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+    color: #e00022;
   }
   .contacts__button:hover {
     color: rgba(0, 0, 0, 0.75);
@@ -1035,9 +1040,6 @@ input.error {
   left: 0;
   width: 80px;
   height: 80px;
-  border: 1px solid rgba(0, 0, 0, 0.5);
-  border-radius: 80px;
-  background-color: #ffffff;
 }
 
 .header-list {
@@ -1466,7 +1468,7 @@ input.error {
 }
 
 .contacts {
-  background-color: #1f1b18;
+  background-color: rgba(0, 0, 0, 0.75);
   color: #ffffff;
   padding-bottom: 55px;
 }
@@ -1525,11 +1527,15 @@ input.error {
 
 .contacts-social__item {
   font-size: 46px;
-  margin-right: 15px;
+  margin-right: 25px;
 }
 
 .contacts-social__item a {
   color: #ffffff;
+}
+
+.contacts-social__item:last-child {
+  margin-right: 0;
 }
 
 .contacts__input {
@@ -1579,7 +1585,7 @@ input.error {
 }
 
 .footer {
-  background-color: #1f1b18;
+  background-color: rgba(0, 0, 0, 0.75);
   color: #ffffff;
   padding: 15px 0;
 }
@@ -1599,9 +1605,6 @@ input.error {
 .footer-logo {
   width: 80px;
   height: 80px;
-  border: 1px solid rgba(0, 0, 0, 0.5);
-  border-radius: 80px;
-  background-color: #ffffff;
 }
 
 .footer-social__list {
