--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -115,6 +115,12 @@ input.error
         transition: 0.5s
         color: $behance-color
 
+  .pinterest
+    a
+      &:hover
+        transition: 0.5s
+        color: $pinterest-color
+
   .contacts
     &__button 
       &:hover
