--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -1,5 +1,5 @@
 .footer 
-  background-color: #1f1b18
+  background-color: $dark-color
   color: $light-color
   padding: 15px 0
   &-wrap 
@@ -9,9 +9,9 @@
   &-logo 
     width: 80px
     height: 80px
-    border: 1px solid $medium-color
-    border-radius: 80px
-    background-color: $light-color
+    // border: 1px solid $medium-color
+    // border-radius: 80px
+    // background-color: $light-color
   &-social
     &__list 
       display: flex
