--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -22,9 +22,9 @@
     left: 0
     width: 80px
     height: 80px
-    border: 1px solid $medium-color
-    border-radius: 80px
-    background-color: $light-color
+    // border: 1px solid $medium-color
+    // border-radius: 80px
+    // background-color: $light-color
   &-list 
     display: flex
     text-transform: uppercase
