--- a/sass/_animate.sass
+++ b/sass/_animate.sass
@@ -15,6 +15,14 @@
     transform-origin: top center
     transform: rotateX(0deg) 
 
+  
+@keyframes fadeIn
+  from
+    opacity: 0
+  to 
+    opacity: 1
+
+
 
 @keyframes bloom 
   0% 
