--- a/sass/blocks/_hero.sass
+++ b/sass/blocks/_hero.sass
@@ -5,6 +5,22 @@
   overflow: hidden
   z-index: -1
   position: relative
+
+
+  &-slider 
+    &__item 
+      animation: fadeIn 1s step-start 
+    &:nth-child(2)
+      animation-delay: 1s
+      z-index: 2
+    &:nth-child(3)
+      animation-delay: 2s
+      z-index: 3
+    &:nth-child(4)
+      animation-delay: 3s
+      z-index: 4
+
+
   &-arrow 
     position: absolute
     z-index: 999
