--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -25,6 +25,7 @@
     // border: 1px solid $medium-color
     // border-radius: 80px
     // background-color: $light-color
+    z-index: 3
   &-list 
     display: flex
     text-transform: uppercase
