--- a/sass/blocks/_hero.sass
+++ b/sass/blocks/_hero.sass
@@ -7,18 +7,21 @@
   position: relative
 
 
-  &-slider 
-    &__item 
-      animation: fadeIn 1s step-start 
-    &:nth-child(2)
-      animation-delay: 1s
-      z-index: 2
-    &:nth-child(3)
-      animation-delay: 2s
-      z-index: 3
-    &:nth-child(4)
-      animation-delay: 3s
-      z-index: 4
+  // &-slider 
+  //   &__item 
+  //     animation: fadeIn 0.5s ease-in
+  //   &:nth-child(2)
+  //     animation-delay: 0.5s
+  //   &:nth-child(3)
+  //     animation-delay: 1.5s
+  //   &:nth-child(4)
+  //     animation-delay: 2s
+  //   &:nth-child(5)
+  //     animation-delay: 2.5s
+  //   &:nth-child(6)
+  //     animation-delay: 3s
+  //   &:nth-child(7)
+  //     animation-delay: 3.5s
 
 
   &-arrow 
