--- a/sass/blocks/_edge.sass
+++ b/sass/blocks/_edge.sass
@@ -11,7 +11,7 @@
     width: 48%
     &__image 
       margin-top: 20px
-      margin-right: 20px
+      font-size: 42px
       width: 7%
     &__content 
       width: 93%
