--- a/sass/style.sass
+++ b/sass/style.sass
@@ -25,3 +25,7 @@
 @import 'blocks/contacts'
 // Импорт стилей футера
 @import 'blocks/footer'
+
+
+// Импорт стилей главного слайдера hero 
+@import 'projects/project'
