Разные варианты логотипа компании. Интеграция photoswipe для открытия портфолио

--- a/sass/_colors.sass
+++ b/sass/_colors.sass
@@ -1,6 +1,7 @@
 $medium-color: rgba(0,0,0, 0.5)
 $dark-color: rgba(0,0,0, 0.75)
 // $dark-color: #1f1b18
+// $dark-color: #605f5f
 $black: #000000
 $light-color: #ffffff
 $error-color: #e51c1c 
