--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -78,10 +78,11 @@ input.error
 
   .portfolio
     &-card 
-      &:hover 
-        cursor: pointer
-        &:before
-          opacity: 1
+      &_hover
+        &:hover 
+          cursor: pointer
+          &:before
+            opacity: 1
 
   .follow
     &-slider 
