--- a/sass/blocks/_edge.sass
+++ b/sass/blocks/_edge.sass
@@ -19,6 +19,7 @@
       text-transform: uppercase
     &__text  
       line-height: 1.55
+      color: $dark-color
   &-main
     margin-top: 50px
     padding: 15px
