--- a/sass/blocks/_portfolio.sass
+++ b/sass/blocks/_portfolio.sass
@@ -9,19 +9,21 @@
     height: 3300px
   &-card 
     width: 650px
+    // width: 49% 
     margin: 20px
     position: relative
-    &:before
-      content: ''
-      position: absolute
-      left: 0
-      top: 0
-      width: 100%
-      height: 100%
-      background-image: linear-gradient(to top, rgba(#000, 0.8), rgba(255, 255, 255, 0) 100%)
-      // background-color: $medium-color
-      opacity: 0
-      transition: 0.2s
-    img 
-      display: block
-      min-height: 100%
+    &_hover
+      &:before
+        content: ''
+        position: absolute
+        left: 0
+        top: 0
+        width: 100%
+        height: 100%
+        background-image: linear-gradient(to top, rgba(#000, 0.8), rgba(255, 255, 255, 0) 100%)
+        // background-color: $medium-color
+        opacity: 0
+        transition: 0.2s
+      img 
+        display: block
+        min-height: 100%
