--- a/css/style.css
+++ b/css/style.css
@@ -409,6 +409,24 @@ input.error {
   letter-spacing: 2px;
 }
 
+.arrow {
+  z-index: 998;
+  bottom: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+}
+
+.arrow a {
+  display: block;
+  width: 40px;
+  z-index: 999;
+}
+
 @media (min-width: 992px) {
   .header-list__item a {
     position: relative;
@@ -429,6 +447,10 @@ input.error {
   .header-list__item a:hover:before {
     -webkit-transform: scaleX(1);
             transform: scaleX(1);
+  }
+  .up:hover {
+    opacity: 0.75;
+    cursor: pointer;
   }
   .portfolio-card_hover:hover {
     cursor: pointer;
@@ -1210,6 +1232,21 @@ input.error {
   text-decoration: underline;
 }
 
+.up {
+  position: fixed;
+  right: 40px;
+  bottom: 33px;
+  opacity: .6;
+  display: none;
+  z-index: 9999;
+  outline: none;
+  width: 40px;
+  height: 40px;
+  border-radius: 40px;
+  background-color: #404040;
+  padding: 5px;
+}
+
 .header {
   position: relative;
   padding: 15px 0;
@@ -1287,27 +1324,15 @@ input.error {
   min-height: 700px;
   height: 100vh;
   overflow: hidden;
-  z-index: -1;
   position: relative;
+}
+
+.hero-slider {
+  z-index: -1;
 }
 
 .hero-arrow {
   position: absolute;
-  z-index: 998;
-  bottom: 20px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  width: 100%;
-}
-
-.hero-arrow a {
-  display: block;
-  width: 50px;
-  z-index: 999;
 }
 
 .edge__title {
