--- a/sass/blocks/_hero.sass
+++ b/sass/blocks/_hero.sass
@@ -3,8 +3,11 @@
   min-height: 700px
   height: 100vh
   overflow: hidden
-  z-index: -1
   position: relative
+  &-slider 
+    z-index: -1
+  &-arrow 
+    position: absolute
 
 
   // &-slider 
@@ -21,17 +24,5 @@
   //   &:nth-child(6)
   //     animation-delay: 3s
   //   &:nth-child(7)
-  //     animation-delay: 3.5s
-
-
-  &-arrow 
-    position: absolute
-    z-index: 998
-    bottom: 20px
-    display: flex
-    justify-content: center
-    width: 100%
-    a
-      display: block
-      width: 50px
-      z-index: 999
+  //     animation-delay: 3.5
+    
