--- a/sass/style.sass
+++ b/sass/style.sass
@@ -18,6 +18,8 @@
 @import 'blocks/edge'
 // Импорт стилей блока с этапами работы
 @import 'blocks/steps'
+// Импорт стилей блока со списком материалов для ТЗ
+@import 'blocks/info'
 // Импорт стилей блока с портфолио
 @import 'blocks/_portfolio.sass'
 // Импорт стилей блока с ползунком
