--- a/sass/_up.sass
+++ b/sass/_up.sass
@@ -1,8 +1,8 @@
 .up
   position: fixed
   right: 40px
-  bottom: 33px
-  opacity: .
+  bottom: 55px
+  opacity: .6
   display: none
   z-index: 9999
   outline: none
@@ -11,5 +11,9 @@
   border-radius: 40px
   border: 3px solid $light-color
   background-color: #404040
-  padding: 5px
-  
+  // padding: 5px
+  font-size: 28px
+  color: #fff
+  display: flex
+  align-items: center
+  justify-content: center  
