Кнопка вверх появляется при скролле. Изменила twentytwenty- загружает сразу

--- a/css/style.css
+++ b/css/style.css
@@ -1247,6 +1247,9 @@ input.error {
   background-color: #404040;
   font-size: 28px;
   color: #fff;
+}
+
+.up_flex {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
