--- a/sass/_up.sass
+++ b/sass/_up.sass
@@ -11,9 +11,9 @@
   border-radius: 40px
   border: 3px solid $light-color
   background-color: #404040
-  // padding: 5px
   font-size: 28px
   color: #fff
-  display: flex
-  align-items: center
-  justify-content: center  
+  &_flex
+    display: flex
+    align-items: center
+    justify-content: center 
