--- a/sass/blocks/_hero.sass
+++ b/sass/blocks/_hero.sass
@@ -8,6 +8,12 @@
     z-index: -1
   &-arrow 
     position: absolute
+  &-logo 
+    position: absolute
+    width: 100px
+    bottom: 10px
+    right: 15px
+    opacity: 0.6
 
 
   // &-slider 
