--- a/sass/projects/_project.sass
+++ b/sass/projects/_project.sass
@@ -26,6 +26,8 @@
     +thin
   &-portfolio
     &_1
-      height: 4000px
+      height: 3200px
     &_2 
       height: 3600px
+    &_3 
+      height: 3100px
